added none-ls lua linter, changed fit e-mail

--- a/bash/.gitconfig
+++ b/bash/.gitconfig
@@ -1,6 +1,6 @@
 [user]
-	email = coldousedbird
-	name = coldousedbird
+  email = coldousedbird@gmail.com
+  name = coldousedbird
 [credential]
 	helper = cache --timeout 7200
 	helper = oauth
