--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -48,169 +48,174 @@ output * bg ~/Pictures/luffy.jpg fill
 # `man 5 sway-input` - for more info about section
 # input * xkb_layout pt-custom   
 input "1:1:AT_Translated_Set_2_keyboard" {
-    xkb_layout us,ru
+  xkb_layout us,ru
     xkb_options grp:win_space_toggle,ctrl:nocaps
     xkb_numlock enabled
 }
 input "2:7:SynPS/2_Synaptics_TouchPad" {
-    dwt enabled
+  dwt enabled
     tap enabled
     natural_scroll enabled
     middle_emulation enabled
     accel_profile "adaptive"
- }
+}
 
 # Window visuals ------------------------------------------------------------------------------
-gaps inner 7
+include ~/.config/sway/everforest.config
+font pango: "Commit Mono Nerd Font" Regular 11gaps inner 7
 smart_gaps yes
 default_border pixel
 
 # class          frame   background indicator parent_frame
-client.focused   #000000 #2ba3ff    #ff0000   #2e9ef4
-client.unfocused #000000 #4e9157    #ffffff   #2e9ef4
+# client.focused   #000000 #2ba3ff    #ff0000   #2e9ef4
+# client.unfocused #000000 #4e9157    #ffffff   #2e9ef4
 # subclasses: focused, focused_inactive, unfocused
 # nice blue biruzovi color: #44ee99
 
 
 # Key bindings --------------------------------------------------------------------------------
 
-    # Shortcuts ------
-    # terminal
-    bindsym $mod+Return exec $term
-    # kill focused window
-    bindsym $mod+$win+q kill
-    # launcher
-    bindsym $mod+Space exec $menu
-    # reload the configuration file
-    bindsym $mod+$win+r reload
-    # exit sway (logs you out of your Wayland session)
-    bindsym $mod+$win+e exec swaynag -t warning -m 'Exit sway?' -B 'Yes' 'swaymsg exit'
-    
-    # Screencast ------
-    # full screenshot
-    bindsym Print exec grim ~/Pictures/screenshots/screenshot_"$(date +%d-%m-%y_%H:%M:%S)".png
-    # area screenshot
-    bindsym $mod+Print exec grim -g "$(slurp)" ~/Pictures/screenshots/screenshot_"$(date +%d-%m-%y_%H:%M:%S)".png
-    # full screen record (not working)
-    bindsym $win+Print exec wf-recorder --audio -f=~/Videos/screencasts/screencast_"$(date +%d-%m-%y_%H:%M:%S)".mp4
-    # make area record (not working)
-    bindsym $mod+$win+Print exec wf-recorder --audio -g "$(slurp)" -f=~/Videos/
-    
-    # Audio changing ------
-    # increase volume
-    # wpctl set-volume -l 1.5 @DEFAULT_AUDIO_SINK@ 5%+
-    # decrease volume
-    # wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
-    # toggle mute volume
-    # wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
-    # toggle mute microphone
-    # wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
+# Shortcuts ------
+# terminal
+bindsym $mod+Return exec $term
+# kill focused window
+bindsym $mod+$win+q kill
+# launcher
+bindsym $mod+Space exec $menu
+# reload the configuration file
+bindsym $mod+$win+r reload
+# exit sway (logs you out of your Wayland session)
+bindsym $mod+$win+e exec swaynag -t warning -m 'Exit sway?' -B 'Yes' 'swaymsg exit'
 
-    # Move focus ------
-    bindsym $mod+$left focus left
-    bindsym $mod+$down focus down
-    bindsym $mod+$up focus up
-    bindsym $mod+$right focus right
-    
-    # Move focused window ------
-    bindsym $win+$left move left
-    bindsym $win+$down move down
-    bindsym $win+$up move up
-    bindsym $win+$right move right
-    bindsym $win+Left move left
-    bindsym $win+Down move down
-    bindsym $win+Up move up
-    bindsym $win+Right move right
-    
-    # Switch workspace ------
-    # directions
-    bindsym $space+$left workspace prev
-    bindsym $space+$right workspace next
-    # back'n'forth
-    bindsym $space+tab workspace back_and_forth
-    # nums
-    bindsym $space+1 workspace number 1
-    bindsym $space+2 workspace number 2
-    bindsym $space+3 workspace number 3
-    bindsym $space+4 workspace number 4
-    bindsym $space+5 workspace number 5
-    bindsym $space+6 workspace number 6
-    bindsym $space+7 workspace number 7
-    bindsym $space+8 workspace number 8
-    bindsym $space+9 workspace number 9
-    bindsym $space+0 workspace number 10
-    
-    # Move windows to workspaces ------
-    # directions
-    bindsym $win+$space+$left move container to workspace prev
-    bindsym $win+$space+$right move container to workspace next
-    # numbers
-    bindsym $win+$space+1 move container to workspace number 1
-    bindsym $win+$space+2 move container to workspace number 2
-    bindsym $win+$space+3 move container to workspace number 3
-    bindsym $win+$space+4 move container to workspace number 4
-    bindsym $win+$space+5 move container to workspace number 5
-    bindsym $win+$space+6 move container to workspace number 6
-    bindsym $win+$space+7 move container to workspace number 7
-    bindsym $win+$space+8 move container to workspace number 8
-    bindsym $win+$space+9 move container to workspace number 9
-    bindsym $win+$space+0 move container to workspace number 10
+# Screencast ------
+# full screenshot
+bindsym Print exec grim ~/Pictures/screenshots/screenshot_"$(date +%d-%m-%y_%H:%M:%S)".png
+# area screenshot
+bindsym $mod+Print exec grim -g "$(slurp)" ~/Pictures/screenshots/screenshot_"$(date +%d-%m-%y_%H:%M:%S)".png
+# full screen record (not working)
+bindsym $win+Print exec wf-recorder --audio -f=~/Videos/screencasts/screencast_"$(date +%d-%m-%y_%H:%M:%S)".mp4
+# make area record (not working)
+bindsym $mod+$win+Print exec wf-recorder --audio -g "$(slurp)" -f=~/Videos/
+
+# Audio changing ------
+# increase volume
+# wpctl set-volume -l 1.5 @DEFAULT_AUDIO_SINK@ 5%+
+# decrease volume
+# wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
+# toggle mute volume
+# wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
+# toggle mute microphone
+# wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
+
+# Move focus ------
+bindsym $mod+$left focus left
+bindsym $mod+$down focus down
+bindsym $mod+$up focus up
+bindsym $mod+$right focus right
+
+# Move focused window ------
+bindsym $win+$left move left
+bindsym $win+$down move down
+bindsym $win+$up move up
+bindsym $win+$right move right
+bindsym $win+Left move left
+bindsym $win+Down move down
+bindsym $win+Up move up
+bindsym $win+Right move right
+
+# Switch workspace ------
+# directions
+bindsym $space+$left workspace prev
+bindsym $space+$right workspace next
+# back'n'forth
+bindsym $space+tab workspace back_and_forth
+# nums
+bindsym $space+1 workspace number 1
+bindsym $space+2 workspace number 2
+bindsym $space+3 workspace number 3
+bindsym $space+4 workspace number 4
+bindsym $space+5 workspace number 5
+bindsym $space+6 workspace number 6
+bindsym $space+7 workspace number 7
+bindsym $space+8 workspace number 8
+bindsym $space+9 workspace number 9
+bindsym $space+0 workspace number 10
+
+# Move windows to workspaces ------
+# directions
+bindsym $win+$space+$left move container to workspace prev
+bindsym $win+$space+$right move container to workspace next
+# numbers
+bindsym $win+$space+1 move container to workspace number 1
+bindsym $win+$space+2 move container to workspace number 2
+bindsym $win+$space+3 move container to workspace number 3
+bindsym $win+$space+4 move container to workspace number 4
+bindsym $win+$space+5 move container to workspace number 5
+bindsym $win+$space+6 move container to workspace number 6
+bindsym $win+$space+7 move container to workspace number 7
+bindsym $win+$space+8 move container to workspace number 8
+bindsym $win+$space+9 move container to workspace number 9
+bindsym $win+$space+0 move container to workspace number 10
 
 
-    # Layout control ------
-    # split container
-    bindsym $mod+b splith
-    bindsym $mod+v splitv
-    # switch active containers layout style
-    bindsym $mod+s layout stacking
-    bindsym $mod+w layout tabbed
-    bindsym $mod+e layout toggle split
-    # make active active fullscreen
-    bindsym $mod+f fullscreen
+# Layout control ------
+# split container
+bindsym $mod+b splith
+bindsym $mod+v splitv
+# switch active containers layout style
+bindsym $mod+s layout stacking
+bindsym $mod+w layout tabbed
+bindsym $mod+e layout toggle split
+# make active active fullscreen
+bindsym $mod+f fullscreen
 
-    # Floating mode (off) ------
-    # $mod+space
-    # toggle the current focus between tiling and floating mode
-    # bindsym $mod+$win+space floating toggle
-    # Swap focus between the tiling area and the floating area
-    # bindsym $mod+space focus mode_toggle
-    # Move focus to the parent container
-    # bindsym $mod+a focus parent
-    
-    # Scratchpad ------
-    # hide active to scratchpad
-    bindsym $mod+$win+minus move scratchpad
-    # retrieve active from scratchpad (cyclic)
-    bindsym $mod+minus scratchpad show
+# Floating mode (off) ------
+# $mod+space
+# toggle the current focus between tiling and floating mode
+# bindsym $mod+$win+space floating toggle
+# Swap focus between the tiling area and the floating area
+# bindsym $mod+space focus mode_toggle
+# Move focus to the parent container
+# bindsym $mod+a focus parent
 
-    # Resizing containers ------
-    set $shift 15px
-    bindsym $mod+r mode "resize"
-    mode "resize" {
-        bindsym $left resize shrink width $shift
-        bindsym $down resize grow height $shift
-        bindsym $up resize shrink height $shift
-        bindsym $right resize grow width $shift
+# Scratchpad ------
+# hide active to scratchpad
+bindsym $mod+$win+minus move scratchpad
+# retrieve active from scratchpad (cyclic)
+bindsym $mod+minus scratchpad show
 
-        # Return to default mode
-        bindsym $mod mode "default"
-        bindsym Return mode "default"
-        bindsym Escape mode "default"
-    }
+# Resizing containers ------
+set $shift 15px
+bindsym $mod+r mode "resize"
+mode "resize" {
+  bindsym $left resize shrink width $shift
+    bindsym $down resize grow height $shift
+    bindsym $up resize shrink height $shift
+    bindsym $right resize grow width $shift
+
+# Return to default mode
+    bindsym $mod mode "default"
+    bindsym Return mode "default"
+    bindsym Escape mode "default"
+}
 
 
 # Status bar ------
-    # `man 5 sway-bar`
-    bar {
-        position top
-        # When the status_command prints a new line to stdout, swaybar updates.
-        # The default just shows the current date and time.
-        status_command while date +'%Y-%m-%d %X'; do sleep 1; done
-        colors {
-            statusline #ffffff
-            background #323232
-            inactive_workspace #32323200 #32323200 #5c5c5c
-        }
-    }
+# `man 5 sway-bar`
+bar {
+  swaybar_command waybar
+}
+
+# bar {
+#         position top
+#         # When the status_command prints a new line to stdout, swaybar updates.
+#         # The default just shows the current date and time.
+#         status_command while date +'%Y-%m-%d %X'; do sleep 1; done
+#         colors {
+#             statusline #ffffff
+#             background #323232
+#             inactive_workspace #32323200 #32323200 #5c5c5c
+#         }
+#    }
 
 include /etc/sway/config.d/*
