--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -49,7 +49,7 @@ output * bg ~/Pictures/luffy.jpg fill
 # input * xkb_layout pt-custom   
 input "1:1:AT_Translated_Set_2_keyboard" {
   xkb_layout us,ru
-    xkb_options grp:win_space_toggle,ctrl:nocaps
+    xkb_options grp:win_space_toggle,caps:escape
     xkb_numlock enabled
 }
 input "2:7:SynPS/2_Synaptics_TouchPad" {
