deleted wayland session in kitty due to uselessness

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,5 +1,5 @@
 # vim:fileencoding=utf-8:foldmethod=marker
-linux_display_server wayland
+# linux_display_server wayland
 # BEGIN_KITTY_THEME
 # Everforest Dark Hard
 include current-theme.conf
@@ -1221,7 +1221,7 @@ hide_window_decorations yes
 
 #: The foreground and background colors.
 
-background_opacity 0.9 
+background_opacity 0.8 
 
 #: The opacity of the background. A number between zero and one, where
 #: one is opaque and zero is fully transparent. This will only work if
@@ -2645,16 +2645,16 @@ background_opacity 0.9
 
 
 # BEGIN_KITTY_FONTS
-<<<<<<< HEAD
+# <<<<<<< HEAD
 font_family      family="CommitMono Nerd Font"
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
 # END_KITTY_FONTS
-=======
+# =======
 font_family      family="CommitMono Nerd Font Mono"
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
 # END_KITTY_FONTS
->>>>>>> ddcc7ab7b347067ca5609d5a2a5b68f4f3d164f7
+# >>>>>>> ddcc7ab7b347067ca5609d5a2a5b68f4f3d164f7
