edited kitty conf a little

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,19 +1,27 @@
 # vim:fileencoding=utf-8:foldmethod=marker
 # linux_display_server wayland
-# BEGIN_KITTY_THEME
-# Everforest Dark Hard
+
+# kitty theme: Everforest Dark Hard
 include current-theme.conf
-# END_KITTY_THEME
+
+# kitty font: CommitMono 
+font_family      family="CommitMono Nerd Font Mono"
+bold_font        auto
+italic_font      auto
+bold_italic_font auto
+
+
+
 
 #: Fonts {{{
 
 #: kitty has very powerful font management. You can configure
 #: individual font faces and even specify special fonts for particular
 #: characters.
-font_family      CommitMonoMono
-bold_font        auto
-italic_font      auto
-bold_italic_font auto
+# font_family      CommitMonoMono
+# bold_font        auto
+# italic_font      auto
+# bold_italic_font auto
 
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. The easiest way to select fonts is to run the `kitten
@@ -2643,18 +2651,3 @@ background_opacity 0.8
 
 #: }}}
 
-
-# BEGIN_KITTY_FONTS
-# <<<<<<< HEAD
-font_family      family="CommitMono Nerd Font"
-bold_font        auto
-italic_font      auto
-bold_italic_font auto
-# END_KITTY_FONTS
-# =======
-font_family      family="CommitMono Nerd Font Mono"
-bold_font        auto
-italic_font      auto
-bold_italic_font auto
-# END_KITTY_FONTS
-# >>>>>>> ddcc7ab7b347067ca5609d5a2a5b68f4f3d164f7
