kitty: some config changes

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -10,7 +10,11 @@ bold_font        auto
 italic_font      auto
 bold_italic_font auto
 
+map kitty_mod+] next_window
+map kitty_mod+[ previous_window
 
+enabled_layouts horizontal,vertical
+# draw_minimal_borders yes
 
 
 #: Fonts {{{
@@ -1058,7 +1062,7 @@ hide_window_decorations yes
 
 #: Tab bar {{{
 
-# tab_bar_edge bottom
+tab_bar_edge top
 
 #: The edge to show the tab bar on, top or bottom.
 
@@ -1073,7 +1077,7 @@ hide_window_decorations yes
 #: The second number is the margin between the tab bar and the
 #: contents of the current tab.
 
-# tab_bar_style fade
+tab_bar_style powerline
 
 #: The tab bar style, can be one of:
 
@@ -1131,7 +1135,7 @@ hide_window_decorations yes
 #: The separator between tabs in the tab bar when using separator as
 #: the tab_bar_style.
 
-# tab_powerline_style angled
+tab_powerline_style angled
 
 #: The powerline separator style between tabs in the tab bar when
 #: using powerline as the tab_bar_style, can be one of: angled,
