--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -13,7 +13,7 @@ bold_italic_font auto
 map kitty_mod+] next_window
 map kitty_mod+[ previous_window
 
-enabled_layouts horizontal,vertical
+enabled_layouts horizontal,vertical,tall
 scrollback_pager nvim -c "silent write! /tmp/kitty_scrollback_buffer | te cat /tmp/kitty_scrollback_buffer - " 
 # draw_minimal_borders yes
 map kitty_mod+h show_scrollback
