some kitty changes for ssh

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -4,6 +4,11 @@
 # kitty theme: Everforest Dark Hard
 include current-theme.conf
 
+shell_integration enabled
+
+shell bash
+editor nvim
+
 # kitty font: CommitMono 
 font_family      family="CommitMono Nerd Font Mono"
 bold_font        auto
