kitty: copy all bash_light

--- a/kitty/.config/kitty/ssh.conf
+++ b/kitty/.config/kitty/ssh.conf
@@ -2,4 +2,4 @@ remote_dir kitty
 shell_integration inherited
 remote_kitty no
 share_connections yes
-copy dotfiles/bash_light/.bashrc 
+copy dotfiles/bash_light 
