--- a/git/.config/git/config
+++ b/git/.config/git/config
@@ -2,13 +2,10 @@
   email = coldousedbird@gmail.com
   name = coldousedbird
 [credential]
-  helper = cache --timeout 7200
-  helper = oauth
+  helper = store
 [credential "https://github.com"]
-  helper = 
   helper = !/usr/bin/gh auth git-credential
 [credential "https://gist.github.com"]
-  helper = 
   helper = !/usr/bin/gh auth git-credential
 [core]
   editor = nvim
