git: changed folder with specific gitconfig

--- a/git/.config/git/config
+++ b/git/.config/git/config
@@ -2,7 +2,7 @@
   email = coldousedbird@gmail.com
   name = coldousedbird
 [includeIf "gitdir:~/work/"]
-  path = ~/axi/.gitconfig
+  path = ~/work/.gitconfig
 [credential]
   helper = store
 [credential "https://github.com"]
