--- a/yazi/.config/yazi/yazi.toml
+++ b/yazi/.config/yazi/yazi.toml
@@ -1,6 +1,6 @@
 [mgr]
 ratio = [0, 4, 4]
-sort_by = "none"
+sort_by = "alphabetical"
 show_hidden = true
 show_symlink = true
 sort_dir_first = true
