--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -5,20 +5,37 @@
 include current-theme.conf
 
 shell_integration enabled
-
+hide_window_decorations yes 
 # kitty font: CommitMono 
 font_family      family="CommitMono Nerd Font Mono"
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
 
-map kitty_mod+] next_window
-map kitty_mod+[ previous_window
+#map kitty_mod+] next_window
+#map kitty_mod+[ previous_window
 
 enabled_layouts horizontal,vertical,tall
 scrollback_pager nvim -c "silent write! /tmp/kitty_scrollback_buffer | te cat /tmp/kitty_scrollback_buffer - " 
 # draw_minimal_borders yes
-map kitty_mod+h show_scrollback
+
+kitty_mod ctrl+shift
+map ctrl+t new_tab
+map ctrl+shift+t new_tab
+map ctrl+n next_tab
+map ctrl+shift+n previous_tab
+map ctrl+h show_scrollback
+map ctrl+space load_config_file
+map ctrl+u
+
+
+cursor_trail 200
+cursor_trail_decay 0.1 0.4
+cursor_trail_start_threshold 2
+
+mouse_hide_wait -3.0
+
+mouse_map middle release ungrabbed paste_from_selection
 
 #: Fonts {{{
 
@@ -970,7 +987,7 @@ sync_to_monitor yes
 #: Fade the text in inactive windows by the specified amount (a number
 #: between zero and one, with zero being fully faded).
 
-hide_window_decorations yes 
+# hide_window_decorations yes 
 
 #: Hide the window decorations (title-bar and window borders) with
 #: yes. On macOS, titlebar-only and titlebar-and-corners can be used
@@ -1138,7 +1155,7 @@ tab_bar_style powerline
 #: The separator between tabs in the tab bar when using separator as
 #: the tab_bar_style.
 
-tab_powerline_style angled
+tab_powerline_style slanted
 
 #: The powerline separator style between tabs in the tab bar when
 #: using powerline as the tab_bar_style, can be one of: angled,
