--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -22,8 +22,8 @@ scrollback_pager nvim -c "silent write! /tmp/kitty_scrollback_buffer | te cat /t
 kitty_mod ctrl+shift
 map ctrl+t new_tab
 map ctrl+shift+t new_tab
-map ctrl+n next_tab
-map ctrl+shift+n previous_tab
+map ctrl+tab next_tab
+map ctrl+shift+tab previous_tab
 map ctrl+h show_scrollback
 map ctrl+space load_config_file
 map ctrl+u
