--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -24,7 +24,7 @@ map ctrl+t new_tab
 map ctrl+shift+t new_tab
 map ctrl+tab next_tab
 map ctrl+shift+tab previous_tab
-map ctrl+h show_scrollback
+map ctrl+shift+. show_scrollback
 map ctrl+space load_config_file
 map ctrl+u
 
