--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
 nvim/.config/nvim/lazy-lock.json
-yazi/.config/yazi/package.toml
+nvim/.config/nvim/nvim-pack-lock.json
 yazi/.config/yazi/flavors/
 yazi/.config/yazi/plugins/
