--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -29,9 +29,9 @@ map ctrl+space load_config_file
 map ctrl+u
 
 
-cursor_trail 200
-cursor_trail_decay 0.1 0.4
-cursor_trail_start_threshold 2
+# cursor_trail 200
+# cursor_trail_decay 0.1 0.4
+# cursor_trail_start_threshold 2
 
 mouse_hide_wait -3.0
 
