yazi, nvim: common scrolloff = 7

--- a/yazi/.config/yazi/yazi.toml
+++ b/yazi/.config/yazi/yazi.toml
@@ -5,6 +5,7 @@ show_hidden = true
 show_symlink = true
 sort_dir_first = true
 linemode = "file_info"
+scrolloff = 7
 
 # git plugin
 # [[plugin.prepend_fetchers]]
