kitty: edited mappings

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -21,17 +21,18 @@ scrollback_pager nvim -c "silent write! /tmp/kitty_scrollback_buffer | te cat /t
 
 kitty_mod ctrl+shift
 map ctrl+t new_tab
-map ctrl+shift+t new_tab
+map kitty_mod+t new_tab
 map ctrl+tab next_tab
-map ctrl+shift+tab previous_tab
-map ctrl+shift+. show_scrollback
+map kitty_mod+tab previous_tab
+map kitty_mod+. show_scrollback
 map ctrl+space load_config_file
-map ctrl+u
+map kitty_mod+space load_config_file
+map kitty_mod+g
 
 
-cursor_trail 200
-cursor_trail_decay 0.1 0.4
-cursor_trail_start_threshold 2
+# cursor_trail 200
+# cursor_trail_decay 0.1 0.4
+# cursor_trail_start_threshold 2
 
 mouse_hide_wait -3.0
 
