--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -2,7 +2,10 @@
 # linux_display_server wayland
 
 # kitty theme: Everforest Dark Hard
-include current-theme.conf
+include 'themes/Everforest Dark Hard.conf'
+#include 'themes/Cyberpunk.conf'
+#include 'themes/Hachiko.conf'
+#include 'themes/Midsummer Night.conf'
 
 shell_integration enabled
 hide_window_decorations yes 
@@ -2676,3 +2679,8 @@ background_opacity 0.8
 
 #: }}}
 
+
+# BEGIN_KITTY_THEME
+# Everforest Dark Hard
+include current-theme.conf
+# END_KITTY_THEME
