kitty: changed theme config

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,11 +1,12 @@
 # vim:fileencoding=utf-8:foldmethod=marker
 # linux_display_server wayland
 
-# kitty theme: Everforest Dark Hard
-include 'themes/Everforest Dark Hard.conf'
-#include 'themes/Cyberpunk.conf'
-#include 'themes/Hachiko.conf'
-#include 'themes/Midsummer Night.conf'
+# kitty theme
+include themes/Everforest Dark Hard.conf
+#include themes/Cyberpunk.conf
+#include themes/Hachiko.conf
+#include themes/Midsummer Night.conf
+#include themes/shadotheme.conf
 
 shell_integration enabled
 hide_window_decorations yes 
@@ -2679,8 +2680,3 @@ background_opacity 0.8
 
 #: }}}
 
-
-# BEGIN_KITTY_THEME
-# Everforest Dark Hard
-include current-theme.conf
-# END_KITTY_THEME
